--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -1,3 +1,8 @@
 PORT=4000
 NODE_ENV=development
 CORS_ORIGIN=http://localhost:3000
+
+# Supabase Configuration
+SUPABASE_URL=https://your-project.supabase.co
+SUPABASE_ANON_KEY=your-anon-key-here
+SUPABASE_SERVICE_ROLE_KEY=your-service-role-key-here
