--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -6,3 +6,7 @@ CORS_ORIGIN=http://localhost:3000
 SUPABASE_URL=https://your-project.supabase.co
 SUPABASE_ANON_KEY=your-anon-key-here
 SUPABASE_SERVICE_ROLE_KEY=your-service-role-key-here
+
+# Optional AI API Keys
+OPENAI_API_KEY=
+GROQ_API_KEY=
