--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -23,6 +23,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.0",
+    "@types/swagger-ui-express": "^4.1.8",
     "tsx": "^4.19.2",
     "typescript": "^5.9.3"
   }
