--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -17,7 +17,8 @@
     "@supabase/supabase-js": "^2.94.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "groq-sdk": "^0.37.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
