--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -19,14 +19,18 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-rate-limit": "^8.2.1",
-    "groq-sdk": "^0.37.0"
+    "groq-sdk": "^0.37.0",
+    "helmet": "^8.0.0",
+    "jose": "^5.9.6",
+    "swagger-ui-express": "^5.0.1",
+    "zod": "^3.24.1",
+    "typescript": "^5.9.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.0",
     "@types/swagger-ui-express": "^4.1.8",
-    "tsx": "^4.19.2",
-    "typescript": "^5.9.3"
+    "tsx": "^4.19.2"
   }
 }
